<resources>
    <string name="app_name">entrega2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ingresar">Ingresar</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="acceder">Login</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="registro">Register</string>
    <string name="name">Nombre</string>
</resources>