<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:orientation="vertical"
    android:background="@drawable/dragradadoregistro">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bordes"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_margin="20dp">

        </TextView>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@drawable/bordes2"
            android:padding="15dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textColor="@color/white"
                >

            </TextView>}

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textColor="@color/white"
                android:textSize="20sp">

            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contraseña"
                android:textColor="@color/white"
                >

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginBottom="20dp">

            </EditText>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro"
                android:backgroundTint="@color/white"
                android:textColor="@color/black">

            </Button>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>